<resources>
    <string name="app_name">Brav</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="email_password_title_text">Email and Password</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="signed_in">Signed In</string>
    <string name="sign_in">Sign In</string>
    <string name="email_password_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="fire_base_status_fmt">Firebase User: %s</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="create_account">Create Account</string>
    <string name="verify_email">Verify Email</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="title_activity_case">CaseActivity</string>
    <string name="case_number">Case Number:</string>
    <string name="case_accepted_at">Case Accepted At:</string>
    <string name="completed_at">Completed At:</string>
    <string name="declined_at">Declined At:</string>
    <string name="case_notes">Case Notes:</string>
    <string name="court_case">Court Case:</string>
    <string name="court_filing_date">Court Filing Date:</string>
    <string name="court_jurisdiction">Court Jurisdiction:</string>
    <string name="dispute_Category">Category:</string>
    <string name="description">Description:</string>
    <string name="dispute_amount">Dispute Amount:</string>
    <string name="id">Id:</string>
    <string name="parties_contact_info">Parties Contact Info:</string>
    <string name="parties_involved">Parties Involved:</string>
    <string name="token">token</string>
    <string name="price">Price:</string>
    <string name="language">Language:</string>
    <string name="experience">Experience:</string>
    <string name="specialty">Specialty:</string>
    <string name="search">Search</string>
    <string name="place_holder">Name</string>
    <string name="type">Type:</string>
    <string name="license">License:</string>
    <string name="specialization">Specialization:</string>
    <string name="professional_bio">Professional BIO:</string>
    <string name="name">Name:</string>
    <string name="settings">Settings</string>
    <string name="msgChooseTypeOfCase">Creating a court case! Choose Court Case if you seek mediation in a case that has already been brought up to the court, otherwise press other. After you open a case , you must select a mediator from our list of certified mediators and request a session.</string>
    <string name="create_case">Create Case</string>
    <string name="user_account">User Account</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="sign_out">Sign out</string>
    <string name="category">Category</string>
    <string name="participants">Participants:</string>
    <string name="find_mediator">Find Mediator</string>
    <string name="connect">Connect</string>
    <string name="view_invoices">View Invoices</string>
    <string name="courtCase">Court Case</string>
    <string name="other">Non-court</string>
    <string name="amount">Amount:</string>
    <string name="case_id">Case ID:</string>
    <string name="hours">Hours:</string>
    <string name="mediator_id">Mediator ID:</string>
    <string name="pay">Pay</string>


    <string-array name="price">
        <item>""</item>
        <item>&lt;25</item>
        <item>25–75</item>
        <item>&gt;75</item>
    </string-array>
    <string-array name="language">
        <item>""</item>
        <item>English</item>
        <item>Spanish</item>
        <item>Chinese</item>
    </string-array>
    <string-array name="experience">
        <item>""</item>
        <item>&lt;2 years</item>
        <item>2\-5 years</item>
        <item>&gt;5 years</item>
    </string-array>
    <string-array name="specialization">
        <item>""</item>
        <item>Landlord/Tenant</item>
        <item>Eldercare</item>
        <item>Commercial</item>
        <item>Domestic</item>
        <item>Workplace</item>
        <item>Penal</item>
        <item>Other</item>
    </string-array>

</resources>
