<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".views.UserAccountActivity">


    <TextView
            android:id="@+id/tvLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_account"
            android:textSize="18sp" />

    <TextView
            android:id="@+id/tvUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_holder"
            android:textSize="24sp" />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/btnDeactivateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/deactivate_account" />

        <Button
                android:id="@+id/btnSignOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/sign_out" />
    </LinearLayout>

</LinearLayout>