<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".views.CaseDetailsActivity" android:layout_margin="8dp">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="vertical" android:visibility="gone" android:id="@+id/llcourtCase">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/textView12" android:text="@string/court_case" android:layout_margin="8dp"
                      android:textSize="18sp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/tvCaseDetailCourtCase" android:layout_margin="8dp" android:textSize="18sp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/textView13" android:text="@string/court_jurisdiction"
                      android:layout_margin="8dp" android:textSize="18sp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/tvCaseDetailCourtJurisdiction" android:layout_margin="8dp"
                      android:textSize="18sp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/textView14" android:text="@string/case_number" android:layout_margin="8dp"
                      android:textSize="18sp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/tvCaseDetailCourtNumber" android:layout_margin="8dp" android:textSize="18sp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/textView15" android:text="@string/court_filing_date"
                      android:layout_margin="8dp" android:textSize="18sp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/tvCaseDetailCourtFilingDate" android:layout_margin="8dp"
                      android:textSize="18sp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/textView16" android:text="@string/case_accepted_at" android:layout_margin="8dp"
                      android:textSize="18sp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/tvCaseDetailCaseAcceptedAt" android:layout_margin="8dp" android:textSize="18sp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/textView17" android:text="@string/declined_at" android:layout_margin="8dp"
                      android:textSize="18sp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/tvCaseDetailCaseDeclinedAt" android:layout_margin="8dp" android:textSize="18sp"/>

            <TextView
                    android:text="@string/completed_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView6" android:layout_weight="1"
                    android:layout_margin="8dp" android:textSize="18sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place_holder"
                    android:ems="10"
                    android:id="@+id/tvCaseDetailCompleted" android:layout_weight="1" android:layout_margin="8dp"
                    android:textSize="18sp"/>

        </LinearLayout>


        <TextView
                android:text="@string/dispute_Category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView8" android:layout_weight="1"
                android:layout_margin="8dp" android:textSize="18sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_holder"
                android:ems="10"
                android:id="@+id/tvCaseDetailCategory" android:layout_weight="1" android:layout_margin="8dp"
                android:textSize="18sp"/>

        <TextView
                android:text="@string/dispute_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_weight="1"
                android:layout_margin="8dp" android:textSize="18sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_holder"
                android:ems="10"
                android:id="@+id/tvCaseDetailAmount" android:layout_weight="1" android:layout_margin="8dp"
                android:textSize="18sp"/>

        <TextView
                android:text="@string/parties_involved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView10" android:layout_weight="1"
                android:layout_margin="8dp" android:textSize="18sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_holder"
                android:ems="10"
                android:id="@+id/tvCaseDetailPartiesInvolved" android:layout_weight="1" android:layout_margin="8dp"
                android:textSize="18sp"/>

        <TextView
                android:text="@string/parties_contact_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView11" android:layout_weight="1"
                android:layout_margin="8dp" android:textSize="18sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_holder"
                android:ems="10"
                android:id="@+id/tvCaseDetailPartiesInfo" android:layout_weight="1" android:layout_margin="8dp"
                android:textSize="18sp"/>

        <TextView
                android:text="@string/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_margin="8dp"
                android:textSize="18sp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_holder"
                android:ems="10"
                android:id="@+id/tvCaseDetailDesc" android:lines="10" android:layout_margin="8dp"
                android:textSize="18sp"/>
    </LinearLayout>
</ScrollView>
