<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            tools:context=".views.CourtCaseFormActivity">


        <TextView
                android:id="@+id/tvdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                android:layout_marginBottom="8dp"
                android:text="@string/description"
                android:textSize="18sp" />

        <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textPersonName" />

        <TextView
                android:id="@+id/tvDisputeAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/dispute_amount"
                android:textSize="18sp" />

        <EditText
                android:id="@+id/etDisputeAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/dispute_amount"
                android:inputType="number" />

        <TextView
                android:id="@+id/tvDisputeCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dispute_Category"
                android:textSize="18sp" />

        <Spinner
                android:id="@+id/spDisputeCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

        <TextView
                android:id="@+id/tvPartiesContactInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/parties_contact_info"
                android:textSize="18sp" />

        <EditText
                android:id="@+id/etPartiesContactInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/parties_contact_info"
                android:inputType="textPersonName" />

        <TextView
                android:id="@+id/tvPartiesInvolved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/parties_involved"
                android:textSize="18sp" />

        <EditText
                android:id="@+id/etPartiesInvolved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/parties_involved"
                android:inputType="textPersonName" />

        <TextView
                android:id="@+id/tvCaseNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/case_notes"
                android:textSize="18sp" />

        <EditText
                android:id="@+id/etCaseNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/case_notes"
                android:inputType="textPersonName" />

        <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Create Case" />
    </LinearLayout>
</ScrollView>